fix unecessary horizontal scroll bar

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,6 +1,5 @@
 .containerHome {
   height: 100%;
-  width: 100%;
   color: white;
 
 
@@ -13,6 +12,10 @@
     padding:50px 20px;
     font-size: 45px;
     text-align: center;
+  }
+
+  .row{
+    width: 99%;
   }
 
 }
